Part1/log-gen/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-writer-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput-gen-writer
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
